# bigbang

./: Cargo.toml
.github/workflows/: benchmark.yml
bigbang/: Cargo.toml  README.md
bigbang/benches/: theta.rs
bigbang/src/: entity.rs  grav_tree.rs  node.rs  responsive.rs
bigbang/tests/: arena_rebuild_test.rs  collision_physics_test.rs  correctness.rs  test.rs  verification.rs
bigbang_derive/: Cargo.toml
examples/: Cargo.toml
examples/src/basic_simulation_mut/: main.rs
