[package]
edition = "2024"
name = "bigbang"
version = "0.0.11"
authors = ["Alex <alex@alex-hansen.com>"]
license-file = "LICENSE.md"
description = "An optimized framework for n-(hard)-body gravitational simulation"
repository = "https://github.com/sezna/bigbang"
keywords = ["nbody", "gravity", "simulation"]
categories = ["simulation"]
exclude = ["test_files/*"]
readme = "README.md"
documentation = "https://docs.rs/bigbang"

[dependencies]
either = "1.15"
rayon = "1.11"
serde = { version = "1.0", features = ["derive"] }
bigbang_derive = { path = "../bigbang_derive", version = "0.1.0" }

[dev-dependencies]
criterion = "0.8.0"
rand = "0.9.2"

[lib]
crate-type = ["cdylib", "lib", "staticlib"]

[[bench]]
name = "theta"
harness = false
