[package]
name = "bigbang_derive"
version = "0.1.0"
authors = ["Alex Hansen <alex@alex-hansen.com>"]
edition = "2024"
description = "Convenience macro for crates.io/crates/bigbang"
license = "MIT"

[dependencies]
quote = "1.0.42"
syn = { version = "2.0.111", features = ["derive"] }

[lib]
proc-macro = true
