[package]
name = "bigbang_examples"
version = "0.1.0"
authors = ["Alex Hansen <alex@42layers.io>"]
edition = "2024"

[[bin]]
name = "basic_simulation"
path = "src/basic_simulation/main.rs"

[[bin]]
name = "basic_simulation_mut"
path = "src/basic_simulation_mut/main.rs"

[dependencies]
bigbang = { path = "../bigbang" }